--- a/styles/HomePage/Style.css
+++ b/styles/HomePage/Style.css
@@ -219,229 +219,19 @@
 @media only screen and (min-width: 768px) {
   .banner-main-con {
     margin-top: 80px;
-    padding: 5px;
   }
 }
-.banner-main-con .content {
-  flex-wrap: wrap;
-  margin: 5px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-direction: column;
+.banner-main-con .carousel-con .carousel-items-con {
+  height: 230px;
 }
 @media only screen and (min-width: 768px) {
-  .banner-main-con .content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: row;
-  }
-}
-.banner-main-con .content .text-content {
-  position: relative;
-  width: 100%;
-  height: 0px;
-}
-@media only screen and (min-width: 768px) {
-  .banner-main-con .content .text-content {
-    width: 50%;
-    margin-bottom: auto;
-    margin-top: 40px;
-  }
-}
-.banner-main-con .content .text-content h2 {
-  text-align: center;
-  color: #3c91e6;
-  font-weight: bolder;
-}
-@media only screen and (min-width: 768px) {
-  .banner-main-con .content .text-content h2 {
-    font-size: 45px;
-  }
-}
-@media only screen and (min-width: 1023px) {
-  .banner-main-con .content .text-content h2 {
-    font-size: 70px;
-  }
-}
-.banner-main-con .content .text-content .banner-text-con {
-  width: 100vw;
-  width: 100%;
-  margin-top: -20px;
-}
-.banner-main-con .content .text-content .banner-text-con .cat-desc {
-  position: absolute;
-  width: 100%;
-  display: none;
-}
-@media only screen and (min-width: 768px) {
-  .banner-main-con .content .text-content .banner-text-con .cat-desc {
-    display: block;
-  }
-}
-.banner-main-con .content .text-content .banner-text-con .cat-desc h3 {
-  width: 100%;
-  font-size: 15px;
-  line-height: 1.5;
-  color: #3c91e6;
-  font-weight: bolder;
-  text-align: center;
-}
-@media only screen and (min-width: 768px) {
-  .banner-main-con .content .text-content .banner-text-con .cat-desc h3 {
-    margin-top: 20px;
-  }
-}
-@media only screen and (min-width: 1023px) {
-  .banner-main-con .content .text-content .banner-text-con .cat-desc h3 {
-    margin-top: 20px;
-    font-size: 25px;
-  }
-}
-.banner-main-con .content .text-content .banner-text-con .cat-desc p {
-  width: 100%;
-  font-size: 15px;
-  line-height: 1.5;
-  color: #666;
-  text-align: center;
-  font-style: italic;
-  display: none;
-}
-@media only screen and (min-width: 768px) {
-  .banner-main-con .content .text-content .banner-text-con .cat-desc p {
-    font-size: 20px;
-    margin-top: 10px;
-    display: block;
-  }
-}
-@media only screen and (min-width: 1023px) {
-  .banner-main-con .content .text-content .banner-text-con .cat-desc p {
-    font-size: 20px;
+  .banner-main-con .carousel-con .carousel-items-con {
+    height: 430px;
   }
 }
 @media only screen and (min-width: 1200px) {
-  .banner-main-con .content .text-content .banner-text-con .cat-desc p {
-    font-size: 25px;
-  }
-}
-.banner-main-con .content .banner-product-img-main-con {
-  position: relative;
-  margin-top: 45px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-@media only screen and (min-width: 768px) {
-  .banner-main-con .content .banner-product-img-main-con {
-    width: 50%;
-    position: relative;
-  }
-}
-.banner-main-con .content .banner-product-img-main-con .swiper-wrapper {
-  margin-bottom: 190px;
-  position: relative;
-  width: 100%;
-  display: flex;
-}
-@media only screen and (min-width: 1023px) {
-  .banner-main-con .content .banner-product-img-main-con .swiper-wrapper {
-    margin-bottom: 200px;
-    max-width: 400px;
-  }
-}
-@media only screen and (min-width: 1200px) {
-  .banner-main-con .content .banner-product-img-main-con .swiper-wrapper {
-    margin-bottom: 270px;
-    max-width: 550px;
-  }
-}
-.banner-main-con .content .banner-product-img-main-con .swiper-wrapper .banner-img-con {
-  position: absolute;
-  width: 250px;
-  height: 190px;
-  margin: 0 auto;
-}
-@media only screen and (min-width: 320px) {
-  .banner-main-con .content .banner-product-img-main-con .swiper-wrapper .banner-img-con {
-    width: 98vw;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-  }
-}
-@media only screen and (min-width: 768px) {
-  .banner-main-con .content .banner-product-img-main-con .swiper-wrapper .banner-img-con {
-    max-width: 400px;
-    height: 200px;
-  }
-}
-@media only screen and (min-width: 1200px) {
-  .banner-main-con .content .banner-product-img-main-con .swiper-wrapper .banner-img-con {
-    max-width: 550px;
-    height: 270px;
-  }
-}
-.banner-main-con .content .banner-product-img-main-con .swiper-wrapper .div-2 {
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-}
-.banner-main-con .content .banner-product-img-main-con .swiper-wrapper .img {
-  max-width: 100%; /* make sure the image does not exceed the container width */
-  max-height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  position: absolute;
-  border-radius: 5px;
-  border: 1px solid rgba(128, 128, 128, 0.132);
-  box-shadow: -5px -10px 15px rgba(128, 128, 128, 0.271);
-}
-@media only screen and (min-width: 768px) {
-  .banner-main-con .content .banner-product-img-main-con .swiper-wrapper .img {
-    margin-bottom: 10px;
-  }
-}
-.banner-main-con .content .banner-product-img-main-con img {
-  width: 95%;
-  z-index: 10;
-}
-@media only screen and (min-width: 768px) {
-  .banner-main-con .content .banner-product-img-main-con img {
-    margin-bottom: -10px;
-  }
-}
-@media only screen and (min-width: 1023px) {
-  .banner-main-con .content .banner-product-img-main-con img {
-    margin-bottom: -40px;
-  }
-}
-.banner-main-con .content .banner-product-img-main-con a {
-  font-size: 15px;
-  padding: 10px 20px;
-  margin-top: -30px;
-  border-radius: 3px;
-  color: #f9f9f9;
-  background: #3c91e6;
-  text-align: center;
-  z-index: 11;
-}
-.banner-main-con .content .banner-product-img-main-con a:hover {
-  background: #444;
-}
-@media only screen and (min-width: 768px) {
-  .banner-main-con .content .banner-product-img-main-con a {
-    font-size: 25px;
-    width: 210px;
-  }
-}
-@media only screen and (min-width: 1023px) {
-  .banner-main-con .content .banner-product-img-main-con a {
-    font-size: 25px;
+  .banner-main-con .carousel-con .carousel-items-con {
+    height: 630px;
   }
 }
 
@@ -488,10 +278,24 @@
   background: white !important;
   border-radius: 5px;
   border: 1px solid #f5f3f3;
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
+}
+.new-arrivals-main-con .new-arrivals-con .new-products-con .new-products-case .percentage-off {
+  position: absolute;
+  z-index: 20;
+  height: 45px;
+  border-bottom-right-radius: 12px;
+  top: 0px;
+  left: 0px;
+  background: #3c91e6;
+  color: white;
+  text-align: center;
+  padding: 5px;
+  font-size: 12px;
 }
 .new-arrivals-main-con .new-arrivals-con .new-products-con .new-products-case .new-products {
   height: 250px;
@@ -505,19 +309,6 @@
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
-}
-.new-arrivals-main-con .new-arrivals-con .new-products-con .new-products-case .new-products .percentage-off {
-  position: absolute;
-  z-index: 20;
-  height: 45px;
-  border-bottom-right-radius: 12px;
-  top: 0px;
-  left: 0px;
-  background: #3c91e6;
-  color: white;
-  text-align: center;
-  padding: 5px;
-  font-size: 12px;
 }
 .new-arrivals-main-con .new-arrivals-con .new-products-con .new-products-case .new-products .img {
   height: 100%;
