--- a/styles/HomePage/Style.scss
+++ b/styles/HomePage/Style.scss
@@ -250,233 +250,20 @@ $txt-light-blue: #cfe8ff;
     no-repeat;
   background-size: cover;
   background-position: center;
-  // padding: 5px;
 
-  // border: 2px solid red;
   @include responsive(bigphone) {
     margin-top: 80px;
-    padding: 5px;
   }
 
-  .content {
-    // border: 2px solid red;
-    flex-wrap: wrap;
-    margin: 5px;
-    @include flexDisplay(space-between, center, column);
+  .carousel-con {
+    .carousel-items-con {
+      height: 230px;
 
-    @include responsive(bigphone) {
-      @include flexDisplay(space-between, center, row);
-      // flex-wrap: wrap;
-    }
-
-    .text-content {
-      // border: 2px solid red;
-      // @include flexDisplay(space-between, center, column);
-      position: relative;
-      width: 100%;
-      height: 0px;
       @include responsive(bigphone) {
-        width: 50%;
-        margin-bottom: auto;
-        margin-top: 40px;
+        height: 430px;
       }
-
-      h2 {
-        // font-size: 16px;
-        //  border: 2px solid red;
-        text-align: center;
-        color: $txt-blue;
-        font-weight: bolder;
-        @include responsive(bigphone) {
-          font-size: 45px;
-        }
-        @include responsive(tablet) {
-          font-size: 70px;
-        }
-      }
-      .banner-text-con {
-        // border: 1px solid rgb(0, 255, 13);
-        width: 100vw;
-
-        width: 100%;
-        margin-top: -20px;
-
-        .cat-desc {
-          position: absolute;
-          // border: 2px solid red;
-          width: 100%;
-          display: none;
-          @include responsive(bigphone) {
-            display: block;
-          }
-
-          h3 {
-            width: 100%;
-            font-size: 15px;
-            line-height: 1.5;
-            color: $txt-blue;
-            font-weight: bolder;
-            text-align: center;
-            @include responsive(bigphone) {
-              margin-top: 20px;
-            }
-            @include responsive(tablet) {
-              margin-top: 20px;
-              font-size: 25px;
-            }
-          }
-          p {
-            // border: 1px solid rgb(13, 0, 255);
-            width: 100%;
-            font-size: 15px;
-            line-height: 1.5;
-            color: $font-light;
-            text-align: center;
-            // position: absolute;
-            font-style: italic;
-            display: none;
-
-            @include responsive(bigphone) {
-              font-size: 20px;
-              margin-top: 10px;
-              display: block;
-            }
-            @include responsive(tablet) {
-              font-size: 20px;
-            }
-            @include responsive(desktop) {
-              font-size: 25px;
-            }
-          }
-        }
-      }
-    }
-    .banner-product-img-main-con {
-      // border: 2px solid red;
-      position: relative;
-      margin-top: 45px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-
-      // @include flexDisplay(space-between, center, column);
-      @include responsive(bigphone) {
-        width: 50%;
-        position: relative;
-      }
-      .swiper-wrapper {
-        margin-bottom: 190px;
-        position: relative;
-        width: 100%;
-        // max-width: 350px;
-        // border: 2px solid rgb(4, 0, 255);
-        display: flex;
-
-        @include responsive(tablet) {
-          margin-bottom: 200px;
-          max-width: 400px;
-        }
-        @include responsive(desktop) {
-          margin-bottom: 270px;
-          max-width: 550px;
-        }
-
-        .banner-img-con {
-          // border: 2px solid rgb(60, 255, 0);
-          position: absolute;
-          // overflow: hidden;
-          width: 250px;
-          height: 190px;
-          margin: 0 auto;
-
-          @include responsive(phone) {
-            // width: 350px;
-            width: 98vw;
-            // max-width: 350px;
-            margin-left: auto;
-            margin-right: auto;
-            left: 0;
-            right: 0;
-          }
-
-          @include responsive(bigphone) {
-            // margin-bottom: 250px;
-            max-width: 400px;
-            height: 200px;
-          }
-
-          @include responsive(desktop) {
-            // margin-bottom: 250px;
-            max-width: 550px;
-            height: 270px;
-          }
-        }
-
-        .div-2 {
-          // border: 2px solid red;
-          // width: 100%; /* set the width of the div */
-          height: 100%;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          overflow: hidden;
-        }
-        .img {
-          max-width: 100%; /* make sure the image does not exceed the container width */
-          max-height: 100%;
-          object-fit: cover;
-          position: absolute;
-          // top: 50%;
-          // left: 50%;
-          // transform: translate(-50%, -50%);
-          border-radius: 5px;
-          border: 1px solid rgba(128, 128, 128, 0.132);
-          box-shadow: -5px -10px 15px rgba(128, 128, 128, 0.271);
-          @include responsive(bigphone) {
-            // border: 2px solid red;
-            margin-bottom: 10px;
-          }
-        }
-      }
-
-      img {
-        width: 95%;
-        z-index: 10;
-        // border: 2px solid red;
-        @include responsive(bigphone) {
-          // border: 2px solid red;
-          margin-bottom: -10px;
-        }
-        @include responsive(tablet) {
-          // border: 2px solid red;
-          margin-bottom: -40px;
-        }
-      }
-
-      a {
-        font-size: 15px;
-        padding: 10px 20px;
-        margin-top: -30px;
-        border-radius: 3px;
-        color: $bg-light;
-        background: $txt-blue;
-        text-align: center;
-        z-index: 11;
-        &:hover {
-          background: $bg-dark-gray;
-        }
-        @include responsive(bigphone) {
-          // margin-top: 100px;
-          font-size: 25px;
-          width: 210px;
-          // font-weight: bold;
-        }
-        @include responsive(tablet) {
-          // margin-top: -15px;
-          font-size: 25px;
-          // width: 200px;
-        }
+      @include responsive(desktop) {
+        height: 630px;
       }
     }
   }
@@ -517,10 +304,24 @@ $txt-light-blue: #cfe8ff;
         background: white !important;
         border-radius: 5px;
         border: 1px solid #f5f3f3;
+        position: relative;
         // box-shadow: -1px -1px 2px rgba(128, 128, 128, 0.368);
         @include flexDisplay(space-between, center, column);
         // border: 2px solid red;
-
+        .percentage-off {
+          // border: 2px solid rgb(0, 255, 21);
+          position: absolute;
+          z-index: 20;
+          height: 45px;
+          border-bottom-right-radius: 12px;
+          top: 0px;
+          left: 0px;
+          background: $txt-blue;
+          color: white;
+          text-align: center;
+          padding: 5px;
+          font-size: 12px;
+        }
         .new-products {
           height: 250px;
           width: 200px;
@@ -532,20 +333,6 @@ $txt-light-blue: #cfe8ff;
           background: whitesmoke;
           @include flexDisplay(space-between, center, column);
 
-          .percentage-off {
-            // border: 2px solid rgb(0, 255, 21);
-            position: absolute;
-            z-index: 20;
-            height: 45px;
-            border-bottom-right-radius: 12px;
-            top: 0px;
-            left: 0px;
-            background: $txt-blue;
-            color: white;
-            text-align: center;
-            padding: 5px;
-            font-size: 12px;
-          }
           .img {
             // border: 2px solid red;
             height: 100%;
