--- a/styles/HomePage/Style.css
+++ b/styles/HomePage/Style.css
@@ -77,6 +77,9 @@
   align-items: center;
   flex-direction: row;
 }
+.topbar-main-con .topbar-top-con .topbar-top-con-left img {
+  width: 50px;
+}
 .topbar-main-con .topbar-top-con .topbar-top-con-right {
   display: flex;
   justify-content: space-between;
