--- a/styles/ProductPage/style.css
+++ b/styles/ProductPage/style.css
@@ -71,7 +71,7 @@
 }
 .product-page-main-con .product-page-con .category-con {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   flex-direction: row;
   width: 95%;
@@ -80,12 +80,17 @@
   margin: 0 auto;
   transform: scale(0.95);
   position: relative;
+  flex-wrap: wrap;
 }
 @media only screen and (min-width: 768px) {
   .product-page-main-con .product-page-con .category-con {
-    max-width: 650px;
+    max-width: 700px;
     height: 90px;
     border-radius: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: row;
   }
 }
 .product-page-main-con .product-page-con .category-con .category {
@@ -102,11 +107,11 @@
   .product-page-main-con .product-page-con .category-con .category {
     padding: 5px 10px;
     font-size: 15px;
+    margin: 5px;
   }
 }
 @media only screen and (min-width: 768px) {
   .product-page-main-con .product-page-con .category-con .category {
-    width: 20%;
     padding: 10px;
     font-size: 20px;
     transform: scale(0.8);
