--- a/styles/ProductPage/style.scss
+++ b/styles/ProductPage/style.scss
@@ -111,7 +111,7 @@ $txt-light-blue: #cfe8ff;
 
     // CATEGORY FILTER
     .category-con {
-      @include flexDisplay(space-evenly, center, row);
+      @include flexDisplay(center, center, row);
       width: 95%;
       height: 70px;
       border-radius: 5px;
@@ -119,13 +119,15 @@ $txt-light-blue: #cfe8ff;
       transform: scale(0.95);
       // margin-top: 20px;
       position: relative;
-      // border: 2px solid red;
+
+      flex-wrap: wrap;
 
       @include responsive(bigphone) {
-        max-width: 650px;
+        max-width: 700px;
         // margin-top: 40px;
         height: 90px;
         border-radius: 10px;
+        @include flexDisplay(space-evenly, center, row);
       }
       .category {
         border: 0.1px solid rgba(128, 128, 128, 0.352);
@@ -141,9 +143,11 @@ $txt-light-blue: #cfe8ff;
         @include responsive(phone) {
           padding: 5px 10px;
           font-size: 15px;
+          // border: 2px solid red;
+          margin: 5px;
         }
         @include responsive(bigphone) {
-          width: 20%;
+          // width: 20%;
           padding: 10px;
           font-size: 20px;
           transform: scale(0.8);
