--- a/styles/ProductPage/style.css
+++ b/styles/ProductPage/style.css
@@ -85,6 +85,7 @@
 @media only screen and (min-width: 768px) {
   .product-page-main-con .product-page-con .category-con {
     max-width: 700px;
+    color: #ffce26;
     height: 90px;
     border-radius: 10px;
     display: flex;
