--- a/styles/ProductPage/style.scss
+++ b/styles/ProductPage/style.scss
@@ -124,7 +124,7 @@ $txt-light-blue: #cfe8ff;
 
       @include responsive(bigphone) {
         max-width: 700px;
-        // margin-top: 40px;
+        color: #ffce26;
         height: 90px;
         border-radius: 10px;
         @include flexDisplay(space-evenly, center, row);
