--- a/styles/HomePage/Style.css
+++ b/styles/HomePage/Style.css
@@ -76,9 +76,12 @@
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
+  height: 100%;
 }
 .topbar-main-con .topbar-top-con .topbar-top-con-left img {
   width: 50px;
+  height: 100%;
+  width: 130px;
 }
 .topbar-main-con .topbar-top-con .topbar-top-con-right {
   display: flex;
@@ -922,9 +925,10 @@
   position: absolute;
   position: fixed;
   z-index: 200;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   top: 0;
+  right: 0;
   -webkit-backdrop-filter: blur(10px);
           backdrop-filter: blur(10px);
 }
